Do not dispatch 'focus' or 'blur' event twice when window active state is changed

Do not dispatch 'focus' or 'blur' event twice when window active state is changed

https://bugs.webkit.org/show_bug.cgi?id=119727

Reviewed by NOBODY (OOPS!).

Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=155558

Focus/blur event is dispatched in dispatchEventsOnWindowAndFocusedNode in these cases. FocusController::setFocused(bool) calls it, and FocusController::setActive(bool) also calls it if setFocused(true) was already called.

On OSX, these functions are called in the following sequence:
  Activation:
    WebView::setIsActive(true)
      FocusController::setActive(true)
    WebView::setFocus(true)
      FocusController::setFocused(true)
      FocusController::setActive(true)
  Inactivation:
    WebView::setIsActive(false)
      FocusController::setActive(false)
    WebView::setFocus(false)
      FocusController::setFocused(false);

We don't need to call dispatchEventsOnWindowAndFocusedNode in setActive() because we don't make a window focused state true when the window is inactive.

* Source/WebCore/page/FocusController.cpp:
(FocusController::setActiveInternal): Removed "dispatchEventsOnWindowAndFocusedElement" condition and remove "active" bool
* Source/WebCore/page/FocusController.h: Update "setActiveInternal" to override